<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.lab.java.web</groupId>
    <artifactId>web-train</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <junit.platform.version>1.2.0</junit.platform.version>
        <lombok.version>1.16.20</lombok.version>
    </properties>

    <!-- mvn -N io.takari:maven:wrapper -Dmaven=3.5.3 -->

    <dependencies>

        <!-- COMMON LIBS (Log4J2 & Vavr) -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>LATEST</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>LATEST</version>
        </dependency>

        <!-- CODE GENERATION (Lombok & CheckerFramework) -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>edu.washington.cs.types.checker</groupId>
            <artifactId>checker-framework</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>

        <!--Tomcat-->
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-api</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-jsp-api</artifactId>
            <version>LATEST</version>
            <scope>provided</scope>
        </dependency>

        <!-- JAX-RS (Jersey + Jackson) -->
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-servlet</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-moxy</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>LATEST</version>
        </dependency>

        <!--WebSockets-->
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>tomcat-websocket-api</artifactId>
            <version>LATEST</version>
        </dependency>

        <!-- TEST (JUnit 5 & Mockito) -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>java-hamcrest</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>LATEST</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <!-- COMPILER (Java10+ and lombok compatible) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <!--&lt;!&ndash;<arg>&#45;&#45;add-modules=java.xml.ws.annotation</arg>&ndash;&gt;-->
                        <!--&lt;!&ndash;<arg>&#45;&#45;permit-illegal-access</arg>&ndash;&gt;-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>-->
                        <!--<arg>-J&#45;&#45;add-opens</arg>-->
                        <!--<arg>-Jjdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>-->
                    </compilerArgs>
                </configuration>
                <!--<dependencies>-->
                <!--<dependency>-->
                <!--<groupId>org.ow2.asm</groupId>-->
                <!--<artifactId>asm</artifactId>-->
                <!--<version>6.1.1</version> &lt;!&ndash; Use newer version of ASM &ndash;&gt;-->
                <!--</dependency>-->
                <!--</dependencies>-->
            </plugin>

            <!-- SUREFIRE (compatible with JUnit 5+, Java 9+, Lombok) -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.21.0</version>
                <configuration>
                    <argLine>--add-modules java.se.ee</argLine>
                    <includes>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                        <include>**/*TestCase.java</include>
                    </includes>
                    <properties>
                        <!--<includeTags>fast</includeTags>-->
                        <excludeTags>slow</excludeTags>
                        <!--<configurationParameters>-->
                        <!--junit.jupiter.conditions.deactivate = *-->
                        <!--</configurationParameters>-->
                    </properties>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>${junit.platform.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- CODE COVERAGE (JaCoCo) -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.0</version>
                <executions>
                    <execution>
                        <id>jacoco-initialize</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <!-- Property containing settings for JaCoCo runtime agent -->
                            <propertyName>surefireArgLine</propertyName>
                        </configuration>
                    </execution>
                    <!-- Ensures unit test coverage report is created after running tests -->
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <!-- Property for JaCoCo runtime agent, passed to Failsafe plugin -->
                    <execution>
                        <id>pre-integration-test</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>failsafeArgLine</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-integration-test</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- LOMBOK -->
            <!--<plugin>-->
            <!--<groupId>org.projectlombok</groupId>-->
            <!--<artifactId>lombok-maven-plugin</artifactId>-->
            <!--<version>1.16.20.0</version>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<phase>generate-sources</phase>-->
            <!--<goals>-->
            <!--<goal>delombok</goal>-->
            <!--</goals>-->
            <!--<configuration>-->
            <!--<addOutputDirectory>false</addOutputDirectory>-->
            <!--<sourceDirectory>src/main/java</sourceDirectory>-->
            <!--</configuration>-->
            <!--</execution>-->
            <!--<execution>-->
            <!--<id>test-delombok</id>-->
            <!--<phase>generate-test-sources</phase>-->
            <!--<goals>-->
            <!--<goal>testDelombok</goal>-->
            <!--</goals>-->
            <!--<configuration>-->
            <!--<addOutputDirectory>false</addOutputDirectory>-->
            <!--<sourceDirectory>src/test/java</sourceDirectory>-->
            <!--</configuration>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--</plugin>-->

        </plugins>
    </build>

</project>